--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Ultraviolet | Sophisticated Web Proxy</title>
+    <title>Test</title>
     <meta
       name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
+      content="Analyzing websites"
     />
     <meta
       name="keywords"
-      content="proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked"
+      content="chromebook"
     />
     <meta
       name="theme-color"
@@ -37,26 +37,26 @@
         "mainEntity": [
           {
             "@type": "Question",
-            "name": "What is Ultraviolet (Web Proxy)?",
+            "name": "What is?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
+              "text": "Highly used for service-workers and more!"
             }
           },
           {
             "@type": "Question",
-            "name": "How do I unblock sites using Ultraviolet?",
+            "name": "How do?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
+              "text": "Simply head to!"
             }
           },
           {
             "@type": "Question",
-            "name": "What if Ultraviolet is blocked or not working?",
+            "name": "What if?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Join the Titanium Network Discord at discord.gg/unblock!"
+              "text": "Join the Discord!"
             }
           }
         ]
@@ -69,13 +69,12 @@
       title="Ultraviolet Logo"
       class="flex-center logo-wrapper header-center"
     >
-      <img class="logo" src="uv.png" alt="Ultraviolet" />
+      <img class="logo" src="uv.png" alt="Search" />
       <h1>Ultraviolet | TN</h1>
     </div>
     <div class="flex-center desc left-margin">
       <p>
-        Ultraviolet is highly sophisticated proxy used for evading internet
-        censorship.
+       Hi
       </p>
     </div>
 
@@ -94,21 +93,21 @@
     <footer>
       <div>
         <a
-          title="The TitaniumNetwork GitHub organization"
-          href="https://github.com/titaniumnetwork-dev"
+          title="GitHub"
+          href="https://github.com"
           >TitaniumNetwork</a
         >
-        <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
+        <a title="Discord" href="https://discord.gg"
           >Discord</a
         >
         <a
-          title="The TompHTTP GitHub organization"
-          href="https://github.com/tomphttp"
+          title="The GitHub organization"
+          href="https://github.com"
           >TompHTTP</a
         >
         <a
-          title="The official deployment repository for Ultraviolet"
-          href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
+          title="The official deployment"
+          href="https://github.com"
           >GitHub</a
         >
         <a title="License information" href="credits.html">Credits</a>
